Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================
- #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
- The cached ical feed cannot be used to store date objects, recreate them as needed.
- #234070 Fix broken ical title.
- #258501 Make sure calendar.inc is included when creating ical feed.
- #258515 Fix url in ical export.
- #266623 Protect against foreach() errors on empty ical feeds.
- PHP4 can't do comparisons of date objects, so alter calendar comparison code to compare formatted dates instead.
- Remove as many dependencies as possible from install files and auto-enable necessary modules.
- #272263 Make sure empty ical stream doesn't get into cache.
- #272732 Fix missing php closing tag.
- #261610 Prepare for a jQuery popup in the calendar by adding a unique id to the 'node' and altering the date theme to surpress all other dates if $node->date_id is set.
- #243172 Theme('calendar_empty') should be theme('calendar_empty_day'), patch by JohnAlbin.
- Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
- #270818 Fix datebox theme that still defined old deprecated variable 'params'.
- #270078 Fix typo in calendar-year.tpl.php.
- #270303 Make sure iCal part of default view only gets added in if iCal is enabled.

Version 2.0 beta3
=================
- Update README.txt.
- Add rrule to template. 
- Remove options from navigation, not really needed.
- Add in functions to get iCal export working.
- Get rid of calendar_clear_all() function that is not needed any more now that Views 2 has its own method for tracking settings. Also clean up related install and update code.
- #269349 Correct calendar handlers to match Views commit 120575, which changed the way handlers are structured.

Version 2.0 beta2
=================
- Fix handling of CCK dates in date argument.