@@ -18,8 +18,6 @@ function calendar_help($section, $arg) {
 function calendar_init() {
   drupal_add_css(drupal_get_path('module', 'calendar') .'/calendar.css');
   include_once(drupal_get_path('module', 'calendar') .'/theme/theme.inc');
-  drupal_add_js(drupal_get_path('module', 'calendar') .'/calendarblock.js');
-  drupal_add_js('misc/progress.js');
 }
 
 function calendar_theme() {
