@@ -5,6 +5,7 @@ See documentation at http://drupal.org/node/262064.
 
 Version 2.0 dev
 =================
+- #259127 Remove ajax back/next navigation on mini calendar, it's not working well enough.
 - #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
 - The cached ical feed cannot be used to store date objects, recreate them as needed.
 - #234070 Fix broken ical title.
